--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "prettier --write ."
-  },
-  "devDependencies": {
-    "@headlessui/react": "^1.4.2",
-    "@inertiajs/react": "^1.0.0",
-    "@tailwindcss/forms": "^0.5.3",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.12",
-    "axios": "^1.1.2",
-    "laravel-vite-plugin": "^0.8.0",
-    "postcss": "^8.4.18",
-    "prettier": "^3.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.2.1",
-    "vite": "^4.0.0"
-  },
-  "prettier": {
-    "trailingComma": "none",
-    "tabWidth": 4,
-    "semi": false,
-    "singleQuote": false,
-    "printWidth": 112
-  }
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "lint": "prettier --write . && ./vendor/bin/pint"
+    },
+    "devDependencies": {
+        "@headlessui/react": "^1.4.2",
+        "@inertiajs/react": "^1.0.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@vitejs/plugin-react": "^4.0.3",
+        "autoprefixer": "^10.4.12",
+        "axios": "^1.1.2",
+        "laravel-vite-plugin": "^0.8.0",
+        "postcss": "^8.4.18",
+        "prettier": "^3.2.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "tailwindcss": "^3.2.1",
+        "vite": "^4.0.0"
+    },
+    "prettier": {
+        "trailingComma": "none",
+        "tabWidth": 4,
+        "semi": false,
+        "singleQuote": false,
+        "printWidth": 112
+    }
 }
