--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,12 @@
         "inertiajs/inertia-laravel": "^0.6.3",
         "intervention/image-laravel": "^1.2",
         "laravel/framework": "^10.10",
+        "laravel/octane": "^2.3",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "league/flysystem-aws-s3-v3": "^3.0",
+        "spiral/roadrunner-cli": "^2.6.0",
+        "spiral/roadrunner-http": "^3.3.0",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
