--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
         "lint": "prettier --write . && ./vendor/bin/pint"
     },
     "devDependencies": {
-        "@headlessui/react": "^1.4.2",
-        "@inertiajs/react": "^1.0.0",
-        "@tailwindcss/forms": "^0.5.3",
-        "@vitejs/plugin-react": "^4.0.3",
-        "autoprefixer": "^10.4.12",
-        "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.8.0",
-        "postcss": "^8.4.18",
-        "prettier": "^3.2.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "tailwindcss": "^3.2.1",
-        "vite": "^4.0.0"
+        "@headlessui/react": "^1.7.19",
+        "@inertiajs/react": "^1.2.0",
+        "@tailwindcss/forms": "^0.5.7",
+        "@vitejs/plugin-react": "^4.3.1",
+        "autoprefixer": "^10.4.20",
+        "axios": "^1.7.3",
+        "laravel-vite-plugin": "^0.8.1",
+        "postcss": "^8.4.40",
+        "prettier": "^3.3.3",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "tailwindcss": "^3.4.7",
+        "vite": "^4.5.3"
     },
     "prettier": {
         "trailingComma": "none",
@@ -29,11 +29,11 @@
         "printWidth": 112
     },
     "dependencies": {
-        "filepond": "^4.30.6",
+        "filepond": "^4.31.1",
         "filepond-plugin-image-transform": "^3.8.7",
         "react-filepond": "^7.1.2",
-        "react-grid-gallery": "^1.0.1-alpha.0",
-        "sweetalert2": "^11.10.6",
-        "yet-another-react-lightbox": "^3.17.1"
+        "react-grid-gallery": "^1.0.1",
+        "sweetalert2": "^11.12.4",
+        "yet-another-react-lightbox": "^3.21.1"
     }
 }
